# Minecraft-from-scratch

./: CMakeLists.txt  build_win.bat  main.c
.github/workflows/: build.yml  c-cpp.yml
game/: main.c
game/src/: PlayerInput.h
game/src/Implementation/: PlayerInput.c  RenderWorld.c
src/: Lightning.h  PlayerInput.h  RenderPlayer.h  RenderWorld.h  Texture.h
src/Implementation/: Lightning.c  PlayerInput.c  RenderPlayer.c  RenderSun.c  RenderWorld.c  Texture.c
